# bevy-crate-reservations

./: .gitignore  README.md  create.sh  publish.sh  reserved_crates
crates/bevy_bullet/: Cargo.toml
crates/bevy_controller/: Cargo.toml
crates/bevy_csharp/: Cargo.toml
crates/bevy_egui/: Cargo.toml
crates/bevy_imgui/: Cargo.toml
crates/bevy_joystick/: Cargo.toml
crates/bevy_js/: Cargo.toml
crates/bevy_lua/: Cargo.toml
crates/bevy_net/: Cargo.toml
crates/bevy_nphysics/: Cargo.toml
crates/bevy_physics/: Cargo.toml  README.md
crates/bevy_physx/: Cargo.toml
crates/bevy_playstation/: Cargo.toml
crates/bevy_raytracing/: Cargo.toml
crates/bevy_scripting/: Cargo.toml
crates/bevy_sdl2/: Cargo.toml
crates/bevy_switch/: Cargo.toml
crates/bevy_test/: Cargo.toml
crates/bevy_web/: Cargo.toml
crates/bevy_websocket/: Cargo.toml
crates/bevy_xbox/: Cargo.toml
template/: Cargo.toml  README.md
