[package]
name = "bevy_controller"
version = "0.0.1"
edition = "2018"
authors = ["Bevy Contributors <bevyengine@gmail.com>", "Carter Anderson <mcanders1@gmail.com>"]
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy-crate-reservations"
description = "This crate is reserved for the Bevy Engine project"
license = "MIT"
readme = "README.md"

[dependencies]
